# hitta

./: pyproject.toml
src/hitta/: __init__.py  _config.py
src/hitta/resources/: style.css
