[project]
name = "hitta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Isak Samsten", email = "isak@samsten.se" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hitta = "hitta:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
reportUnusedCallResult = false
